--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "react-router-dom": "^5.2.0"
     },
     "devDependencies": {
-        "concurrently": "^4.0.1"
+        "concurrently": "^4.0.1",
+        "eslint": "^7.13.0",
+        "eslint-plugin-react": "^7.21.5"
     }
 }
