--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,14 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "body-parser": "^1.18.3",
+    "bpmn-font": "^0.10.0",
+    "bpmn-js": "^7.4.0",
+    "bpmn-js-properties-panel": "^0.37.5",
+    "camunda-bpmn-moddle": "^4.4.1",
+    "express": "^4.16.4",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
