--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongodb": "^3.6.3"
   },
   "devDependencies": {
     "eslint": "^7.13.0",
