convert bpmn xml to json

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bpmn": "^0.2.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "xml-js": "^1.6.11",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
