--- a/package.json
+++ b/package.json
@@ -2,28 +2,28 @@
   "name": "ark-automate",
   "version": "1.0.0",
   "scripts": {
-    "client": "cd client && yarn start",
-    "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "start": "node server",
+    "build": "cd client/ && npm install && npm run build"
   },
+  "cacheDirectories": [
+    "node_modules",
+    "react-ui/node_modules"
+  ],
   "dependencies": {
-    "antd": "^4.8.0",
     "body-parser": "^1.18.3",
     "bpmn-font": "^0.10.0",
-    "bpmn-js": "^7.4.1",
+    "bpmn-js": "^7.4.2",
     "bpmn-js-properties-panel": "^0.37.5",
     "camunda-bpmn-moddle": "^4.5.0",
     "express": "^4.16.4",
-    "react": "^17.0.1",
-    "react-bpmn": "^0.2.0",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "xml-js": "^1.6.11",
-    "yarn": "^1.22.10"
+    "mongodb": "^3.6.3",
+    "react": "^17.0.1"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1",
     "eslint": "^7.13.0",
     "eslint-plugin-react": "^7.21.5"
+  },
+  "engines": {
+    "node": "12.13.x"
   }
 }
