--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "eslint": "^7.13.0",
-    "eslint-plugin-react": "^7.21.5"
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "engines": {
     "node": "12.13.x"
