--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
