--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,14 +1,27 @@
-name: Linter Bot
-on: [pull_request, push]
+name: Lint
+
+on: push
 
 jobs:
-  eslint:
-    name: runner / eslint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: eslint
-        uses: reviewdog/action-eslint@v1
+  run-linters:
+    name: Run linters
+    runs-on: ubuntu-latest    steps:
+      - name: Check out Git repository
+      uses: actions/checkout@v2      
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
         with:
-          reporter: github-pr-review # Change reporter.
-          eslint_flags: 'src/'
+        node-version: 12      
+        
+        # ESLint and Prettier must be in `package.json`
+      - name: Install Node.js dependencies
+        run: yarn      
+        
+      - name: Run linters
+        uses: samuelmeuli/lint-action@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          # Enable linters
+          eslint: true
+          prettier: true
