fixed typo in yml

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -5,7 +5,9 @@ on: push
 jobs:
   run-linters:
     name: Run linters
-    runs-on: ubuntu-latest    steps:
+    runs-on: ubuntu-latest    
+    
+    steps:
       - name: Check out Git repository
       uses: actions/checkout@v2      
       
