--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,29 +1,11 @@
-name: Lint
-
+name: Linter
 on: push
-
 jobs:
-  run-linters:
-    name: Run linters
-    runs-on: ubuntu-latest    
-
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v2      
-      
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
-        with:
-        node-version: 12      
-        
-        # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies
-        run: yarn      
-        
-      - name: Run linters
-        uses: samuelmeuli/lint-action@v1
-        with:
-          github_token: ${{ secrets.github_token }}
-          # Enable linters
-          eslint: true
-          prettier: true
+    - uses: actions/checkout@v2
+    - name: Install modules
+      run: yarn
+    - name: Run ESLint
+      run: eslint . --ext .js,.jsx,.ts,.tsx
