--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -50,7 +50,7 @@ jobs:
         uses: github/super-linter@v3.3.0
         env:
           # VALIDATE_ALL_CODEBASE: false
-          LINTER_RULES_PATH: .github/linters
+          LINTER_RULES_PATH: client
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
           VALIDATE_JAVASCRIPT_STANDARD: false
           VALIDATE_JAVASCRIPT_ES: true
