new setup of eslint using standard codestyle

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -5,9 +5,7 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "airbnb",
-        "prettier",
-        "prettier/react"
+        "standard"
     ],
     "parserOptions": {
         "ecmaFeatures": {
