--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -34,3 +34,4 @@ jobs:
         with:
           reporter: github-pr-review # Change reporter.
           eslint_flags: 'src/'
+          workdir: ../../
