--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,9 @@
   "name": "ark-automate",
   "version": "1.0.0",
   "scripts": {
-    "start": "node server",
-    "build": "cd client/ && npm install && npm run build"
+    "start": "node server.js",
+    "build": "cd client/ && npm install && npm run build",
+    "lint": "eslint --ignore-path ../.gitignore --ext .js,.ts,.tsx ."
   },
   "cacheDirectories": [
     "node_modules",
