--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,4 +32,5 @@ jobs:
       - uses: actions/setup-node@v2-beta
         with:
           node-version: "14"
+      - run: cd client
       - run: npm run lint
