adapted bash script

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,5 +32,4 @@ jobs:
       - uses: actions/setup-node@v2-beta
         with:
           node-version: "14"
-      - run: cd client
-      - run: npm run lint
+      - run: cd client && npm run lint
