--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --ignore-path ../.gitignore --ext .js,.ts,.tsx ."
+    "lint": "eslint --ignore-path ../.gitignore --ext .js,.jsx ."
   },
   "eslintConfig": {
     "extends": [
