--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "cd client/ && npm install && npm run build",
-    "lint": "eslint --ignore-path ../.gitignore --ext .js,.ts,.tsx ."
+    "lint": "eslint --ignore-path ../.gitignore --ext .js,.jsx ."
   },
   "cacheDirectories": [
     "node_modules",
