--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
   ],
   "dependencies": {
     "express": "^4.16.4",
-    "mongodb": "^3.6.3",
+    "mongodb": "^3.6.3"
   },
   "devDependencies": {
     "eslint": "^7.13.0",
