console.error and console.warn dont show error in linter

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -20,6 +20,7 @@
         "react"
     ],
     "rules": {
+        "no-console": ["error", { "allow": ["warn", "error"] }]
     },
     "root": true
 }
