--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "node server",
     "build": "cd client/ && npm install && npm run build",
-    "test": "jest"
+    "test": "jest",
     "lint": "eslint --ignore-path ../.gitignore --ext .js,.jsx ."
   },
   "cacheDirectories": [
@@ -22,7 +22,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "mongodb-memory-server": "^6.9.3",
     "supertest": "^6.1.1"
