--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   ],
   "dependencies": {
     "express": "^4.16.4",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.16"
   },
   "devDependencies": {
     "eslint": "^7.17.0",
