--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000/",
   "dependencies": {
+    "@ant-design/icons": "^4.4.0",
     "@craco/craco": "^6.1.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "better-docs": "^2.3.2",
     "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.1.0",
@@ -58,7 +60,6 @@
     "eslint-plugin-only-warn": "^1.0.2",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "better-docs": "^2.3.2",
     "jsdoc": "^3.6.6"
   }
 }
