--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "socket.io-client": "^4.0.0",
     "web-vitals": "^0.2.4",
     "xml-js": "^1.6.11"
   },
