--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   ],
   "dependencies": {
     "express": "^4.16.4",
-    "mongoose": "^5.11.16"
+    "mongoose": "^5.11.16",
+    "socket.io": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^7.17.0",
