--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "node server",
     "build": "",
-    "test": "jest",
+    "test": "jest --runInBand",
     "lint": "eslint --ignore-path ../.gitignore --ext .js,.jsx ."
   },
   "cacheDirectories": [
@@ -12,8 +12,11 @@
     "client/node_modules"
   ],
   "dependencies": {
+    "chai": "^4.3.4",
     "express": "^4.16.4",
-    "mongoose": "^5.11.16"
+    "mongoose": "^5.11.16",
+    "node-fetch": "^2.6.1",
+    "sinon": "^9.2.4"
   },
   "devDependencies": {
     "eslint": "^7.17.0",
@@ -26,9 +29,13 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "mongodb-memory-server": "^6.9.6",
+    "node-mocks-http": "^1.10.1",
     "supertest": "^6.1.1"
   },
   "engines": {
     "node": "12.13.x"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
