--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4",
-    "xml-js": "^1.6.11"
+    "xmljs2": "^1.0.0"
   },
   "scripts": {
     "start": "craco start",
