--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,13 @@
     "camunda-bpmn-moddle": "^4.4.1",
     "craco-antd": "^1.19.0",
     "craco-less": "^1.17.1",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-simple-code-editor": "^0.11.0",
     "socket.io-client": "^4.0.0",
     "web-vitals": "^0.2.4",
     "xmljs2": "^1.0.0"
