--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,10 @@
     "eslint-plugin-only-warn": "^1.0.2",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest-localstorage-mock": "^2.4.9",
     "jsdoc": "^3.6.6"
+  },
+  "jest": {
+    "resetMocks": false
   }
 }
