--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "chai": "^4.3.4",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.1",
     "socket.io": "^4.0.0"
