applied prettier config to all files

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,27 +1,24 @@
 {
-    "env": {
-        "es2021": true,
-        "node": true
+  "env": {
+    "es2021": true,
+    "node": true
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "airbnb",
+    "prettier",
+    "prettier/react"
+  ],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": [
-        "plugin:react/recommended",
-        "airbnb",
-        "prettier",
-        "prettier/react"
-    ],
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "only-warn"
-    ],
-    "rules": {
-        "no-console": ["error", { "allow": ["warn", "error"] }]
-    },
-    "root": true 
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["react", "only-warn"],
+  "rules": {
+    "no-console": ["error", { "allow": ["warn", "error"] }]
+  },
+  "root": true
 }
