--- a/documentationConfig.json
+++ b/documentationConfig.json
@@ -1,18 +1,21 @@
 {
-    "opts": {
-        "template": "../client/node_modules/better-docs",
-        "destination": "./../documentationWebsite"
-    },
-    "tags": {
-        "allowUnknownTags": ["category", "component"] 
-    },
-    "plugins": [
-        "node_modules/better-docs/category"
+  "opts": {
+    "template": "../client/node_modules/better-docs",
+    "destination": "./../documentationWebsite"
+  },
+  "tags": {
+    "allowUnknownTags": ["category", "component"]
+  },
+  "plugins": ["node_modules/better-docs/category"],
+  "source": {
+    "include": [
+      "./../client/src",
+      "./../server/controllers",
+      "./../server/services",
+      "./../server/utils"
     ],
-    "source": {
-        "include": ["./../client/src", "./../server/controllers", "./../server/services", "./../server/utils"],
-        "exclude": ["./../client/node_modules", "./../server/node_modules"],
-        "includePattern": ".+\\.js(doc|x)?$",
-        "excludePattern": "(^|\\/|\\\\)_"
-    }
+    "exclude": ["./../client/node_modules", "./../server/node_modules"],
+    "includePattern": ".+\\.js(doc|x)?$",
+    "excludePattern": "(^|\\/|\\\\)_"
+  }
 }
