--- a/server/api/apiSpecification.yaml
+++ b/server/api/apiSpecification.yaml
@@ -4,7 +4,7 @@ info:
     _This document describes the REST API of Ark Automate._
     Ark Automate is a platform that allows office users and software developers to automate business or everyday processes by simply sketching the steps of their process. By using simple flowcharts or powerful BPMN in their process outlines, users can create small software solutions using RPA that finish their tasks much faster and more reliably.
   version: 1.0.0
-  title: Ark API
+  title: Ark-Automate API
   license:
     name: LICENSE (MIT)
     url: https://github.com/bptlab/ark_automate
