--- a/server/api/apiSpecification.yaml
+++ b/server/api/apiSpecification.yaml
@@ -287,7 +287,7 @@ paths:
         204:
           description: No Content
         400:
-          description: Bad Reque
+          description: Bad Request
   /robots/parameters/{robotId}:
     parameters:
       - name: robotId
