--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "node server",
     "build": "",
-    "test": "jest --runInBand",
+    "test": "jest --runInBand --detectOpenHandles",
     "lint": "eslint --ignore-path ../.gitignore --ext .js,.jsx ."
   },
   "cacheDirectories": [
